[package]
name = "jam-game"
version = "0.1.0"
edition = "2021"

[dependencies.bevy_ecs_ldtk]
version = "0.8.0"
features = ["atlas"]

[dependencies.bevy]
version = "0.11.0"
# features = ["dynamic_linking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

